--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,5 +1,15 @@
 {
   "appId": "com.johnpaulpatigas.pigeon",
   "appName": "Pigeon",
-  "webDir": "dist"
+  "webDir": "dist",
+  "plugins": {
+    "SocialLogin": {
+      "providers": {
+        "apple": false,
+        "facebook": false,
+        "google": true,
+        "twitter": false
+      }
+    }
+  }
 }
