--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@capacitor/core": "^8.0.0",
     "@capacitor/status-bar": "^8.0.0",
     "@capawesome/capacitor-android-edge-to-edge-support": "^7.2.3",
+    "@capgo/capacitor-social-login": "^7.20.0",
     "@supabase/supabase-js": "^2.87.0",
     "@tailwindcss/vite": "^4.1.17",
     "lucide-react": "^0.556.0",
